# reposoul

./: .reposouls_state.json  Cargo.toml
.github/workflows/: ci.yml  rust.yml
src/: events.rs  git.rs  github.rs  gui.rs  lib.rs  main.rs  monitor.rs
