[package]
name = "reposouls"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
image = "0.25.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ctrlc = "3.4.4"
dirs = "5.0.1"
rust-embed = "8.4.0"
chrono = { version = "0.4.42", features = ["serde"] }
git2 = "0.18"
